--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+# Whether a "NoHandlerFoundException" should be thrown if no Handler was found to process a request.
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
 server.port=9595
